; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/nvram/extr_bhnd_nvram_value_fmts.c_bhnd_nvram_val_bcm_decimal_encode_elem.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/nvram/extr_bhnd_nvram_value_fmts.c_bhnd_nvram_val_bcm_decimal_encode_elem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"invalid type\00", align 1
@BHND_NVRAM_TYPE_STRING = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [6 x i8] c"%I64d\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"%I64u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i64, i8*, i64*, i64)* @bhnd_nvram_val_bcm_decimal_encode_elem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bhnd_nvram_val_bcm_decimal_encode_elem(i32* %0, i8* %1, i64 %2, i8* %3, i64* %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i64 %2, i64* %10, align 8
  store i8* %3, i8** %11, align 8
  store i64* %4, i64** %12, align 8
  store i64 %5, i64* %13, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = call i64 @bhnd_nvram_val_elem_type(i32* %16)
  store i64 %17, i64* %15, align 8
  %18 = load i64, i64* %15, align 8
  %19 = call i32 @bhnd_nvram_is_int_type(i64 %18)
  %20 = call i32 @BHND_NV_ASSERT(i32 %19, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %21 = load i64, i64* %13, align 8
  %22 = load i64, i64* @BHND_NVRAM_TYPE_STRING, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %32

24:                                               ; preds = %6
  %25 = load i32*, i32** %8, align 8
  %26 = load i8*, i8** %9, align 8
  %27 = load i64, i64* %10, align 8
  %28 = load i8*, i8** %11, align 8
  %29 = load i64*, i64** %12, align 8
  %30 = load i64, i64* %13, align 8
  %31 = call i32 @bhnd_nvram_val_generic_encode_elem(i32* %25, i8* %26, i64 %27, i8* %28, i64* %29, i64 %30)
  store i32 %31, i32* %7, align 4
  br label %45

32:                                               ; preds = %6
  %33 = load i64, i64* %15, align 8
  %34 = call i64 @bhnd_nvram_is_signed_type(i64 %33)
  %35 = icmp ne i64 %34, 0
  %36 = zext i1 %35 to i64
  %37 = select i1 %35, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0)
  store i8* %37, i8** %14, align 8
  %38 = load i8*, i8** %14, align 8
  %39 = load i8*, i8** %9, align 8
  %40 = load i64, i64* %10, align 8
  %41 = load i64, i64* %15, align 8
  %42 = load i8*, i8** %11, align 8
  %43 = load i64*, i64** %12, align 8
  %44 = call i32 @bhnd_nvram_value_printf(i8* %38, i8* %39, i64 %40, i64 %41, i8* %42, i64* %43)
  store i32 %44, i32* %7, align 4
  br label %45

45:                                               ; preds = %32, %24
  %46 = load i32, i32* %7, align 4
  ret i32 %46
}

declare dso_local i64 @bhnd_nvram_val_elem_type(i32*) #1

declare dso_local i32 @BHND_NV_ASSERT(i32, i8*) #1

declare dso_local i32 @bhnd_nvram_is_int_type(i64) #1

declare dso_local i32 @bhnd_nvram_val_generic_encode_elem(i32*, i8*, i64, i8*, i64*, i64) #1

declare dso_local i64 @bhnd_nvram_is_signed_type(i64) #1

declare dso_local i32 @bhnd_nvram_value_printf(i8*, i8*, i64, i64, i8*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
